Update to the loops section of the js-loops docs

--- a/docs/js/js-loops.mdx
+++ b/docs/js/js-loops.mdx
@@ -7,27 +7,37 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import { LeadText } from '../../src/components/LeadText.js';
 
-<LeadText content='For, While and forEach meet Filter, Map, Find, Reduce' />
+<LeadText content='For, While and forEach meet Filter, Map, Find and Reduce' />
 
 ## For Loops
 
 ### For
 
-The classic for loop. Requires initial expression, condition and increment expression to loop.
+The classic for loop is bread and butter in both vanilla JS as well as Marketing Cloud SSJS.
 
-```js
+```js title="Example of for loop iterating over an array"
 for (let i = 0; i < array.length; i++) {
     console.log(array[i]);
 }
 ```
 
+For loop will:
+1. Execute initial expression (`let i = 0` in the above example).
+2. Evaluete the condition (`i < array.length`). If it is false - the loop terminates. If true:
+3. The statement within the loop is executed (`console.log(array[i])`).
+4. Finally the increment expression will be evalueted (`i++`).
+5. Loop goes back to step 2 until it will be false.
+
+
+The classic for loop might be a bit long to define, but it has a lot of great properties:
 - Works with `break` and `continue` statements for better looping control.
+- Both initial and incerement expressions can do multiple things.
 - Condition is not limited to iterable size.
-- Really fast across various scenarios. If you don't know what will be fastest, pick the classic.
+- Really fast across various scenarios.
 
-To optimize speed even more, cache the length in a variable (if you are using it in condition):
+If you don't know what will be fastest, pick the classic. To optimize speed even more, cache the length used for condition:
 
-```js
+```js title="Initial expression assigns array.length to a variable to cache it"
 for (let i = 0, arrayLength = array.length; i < arrayLength; i++) {
     console.log(array[i]);
 }
@@ -35,88 +45,120 @@ for (let i = 0, arrayLength = array.length; i < arrayLength; i++) {
 
 ### For of
 
-Loops over iterables: strings, arrays, nodeLists, maps, sets, etc.
+For-of loop was added in ES6 (so forget about using it in Marketing Cloud SSJS...). It loops over iterables: strings, arrays, NodeLists, maps, sets and other array-like objects. Functionality and readibility makes it really interesting option. Let's dive in.
 
-```js
+```js title="Example of for-of loop iterating over letters of a string"
 for (const letter of name) {
     console.log(letter);
 }
 ```
 
-Fastest fast for very small iterables (<100 items). Along with really readable structure, fantastic tool to iterate over nodeLists when working with DOM.
+This loop is blazing fast for very small iterables. From martech perspective, it is fantastic tool to iterate over NodeLists/HTMLCollections when working with DOM. Works great for working with outputs of API calls. Worth using also for operating on split-string-arrays (for example comma-separated strings).
 
-It can iterate over object key-value pairs with `Object.entries()`:
+It has also multiple qualities that sets it apart from the classic for loop:
 
-```js
+#### Key-Value Pair of Object
+
+It can iterate over key-value paired iterators (for example map or even object - thanks to `Object.entries()`):
+
+```js {1}
 for (const [key, value] of Object.entries(object)) {
     console.log(key, value);
 }
 ```
 
+#### Index-Value Pair of Array
+
 It can catch array values along with indexes:
 
-```js
+```js {1}
 for (const [index, value] of array.entries()) {
     console.log(index, value);
 }
 ```
 
+#### In-place Destructuring
+
 It can destructure object on the go:
 
-```js
+```js {3}
 const persons = [{ name: 'John Smith' }, { name: 'Jane Doe' }];
 
 for (const { name } of persons) {
-    console.log(name); // 'John Smith, Jane Doe
+    console.log(name); // returns: 'John Smith' \n 'Jane Doe'
 }
+```
+
+In this example for-of loop not only iterates over objects within an array, but also automatically destructures them by getting the value of the `name` key. Thanks to it, the `console.log` will be printing the names in one line.
+
+#### Iterating over Function Arguments
+
+Thanks to existance of special function variable `arguments`, for-of can loop over undefined amount of arguments.
+
+```js {3} title="Function will return sum of any number of integers provided thanks to for-of loop"
+function sum() {
+  let sum = 0;
+  for (const number of arguments) {
+    sum += number;
+  }
+  return sum;
+}
+
+sum(1, 2, 3); // returns: 6
 ```
 
 ### For in
 
-Loops over the enumerable properties of an object, in an arbitrary order.
+For-in loop is good idea, when you want to loop over object prototype methods and properties. Any other scenario? Not worth it. Don't use it. Just don't<sup>*</sup>.
 
-```js
+```js {1}
 for (const key in object) {
     console.log(key);
 }
 ```
 
-- Only `For in` loop will return object prototype methods and properties.
-- For any other scenario, different for loops are better option.
+<sup>*</sup>Supported by Marketing Cloud SSJS - and there it might have some use for working with objects only (as for-of loop is unsupported).
 
-### .forEach
+### forEach
 
 For each iterates directly over an array. No need to define a iteration variable. It applies function to each item.
 
-```js
+```js {1}
 array.forEach((item, index, array) => {
-    // Logic
+    console.log(`${item} has index ${index}`);
+    if (index === array.length - 1) {
+        console.log('Last iteration!');
+    }
 });
 ```
 
 - `forEach` does not return anything (it should not be assigned to a variable).
-- In callback function we can leverage up to three parameters for an array: item, index, array.
+- `continue` or `break` won't work.
+- In callback function we can leverage up to three optional parameters for an array: item, index, array.
 - Due to the fact that it uses callback function, the logic is block scoped.
+- Not supported by Marketing Cloud SSJS.
+
+In most scenarios for-of loop will be better choice.
 
 ## While Loops
 
 ### While
 
-`while` loops are much faster for big arrays (10000>).
+A `while` loop executes its statement as long as condition evaluates to true.
 
-```js
+```js {2} title="Infinite while loop"
 let run = true
-while(run === true) {
+while (run === true) {
     console.log('To the infinity and beyond!');
 }
 ```
 
-To break out of while loop, there must be logic within it that will change the condition:
+To break out of while loop, there must be logic within it that will change the condition to false (or a `break` statement):
 
 ```js
 let run = true;
 let i = 0;
-while(run === true) {
+while (run === true) {
     console.log('To the infinity and beyond!');
     i++;
     if (i > 10) {
@@ -125,15 +167,21 @@ while(run === true) {
 }
 ```
 
+`while` loop is best option for iterating over big arrays.
+
+Supported by Marketing Cloud SSJS.
+
 ### Do While
 
-Same as while, but the code runs once before checking the condition.
+Same as while, but the code runs once before evaluating the condition.
 
 ```js
 do {
     console.log('Running!');
 } while (run === true)
 ```
+
+Supported by Marketing Cloud SSJS.
 
 ## Map, Filter, Find, Reduce
 
